# OITools_Template-Expand

./: Cargo.toml  README.md
.cargo/: config.toml
.claude/: ARCHITECTURE.md  CLAUDE.md  PROGRESS.md
.claude/project-tracker/: INDEX.md  api.md  architecture.md  data-model.md  deployment.md  implementation.md  progress.md  stack.md  toolchain.md
.claude/project-tracker/modules/: cli.md  core.md  vscode-extension.md
.github/workflows/: ci.yml  release.yml
fixtures/basic/: greet.h  main.cpp
fixtures/circular/: a.h  b.h  c.h  main.cpp
fixtures/compress/: main.cpp  util.h
fixtures/deep/: level1.h  level2.h  level3.h  level4.h  main.cpp
fixtures/diamond/: base.h  left.h  main.cpp  right.h
fixtures/multiple/: alpha.h  beta.h  gamma.h  main.cpp
fixtures/nested/: main.cpp
fixtures/nested/core/: engine.h
fixtures/pragma-once/: main.cpp  once.cpp  once.h
fixtures/system-include/: answer.h  main.cpp
texpand-cli/: Cargo.toml
texpand-cli/src/: config.rs  main.rs
texpand-core/: Cargo.toml
texpand-core/src/: compressor.rs  expander.rs  graph.rs  lib.rs  main.rs  parser.rs  resolver.rs
texpand-core/tests/: common.rs  test_basic_expansion.rs  test_circular_dep.rs  test_compression.rs  test_conditional_includes.rs  test_edge_cases.rs  test_system_include.rs
texpand-vscode/: Cargo.toml
texpand-vscode/extension/: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  package.nls.json  package.nls.qps-ploc.json  package.nls.zh-CN.json  tsconfig.json
texpand-vscode/extension/src/: extension.ts  (+1 more)
texpand-vscode/src/: lib.rs  main.rs
(+3 files in other folders)
