[package]
name = "texpand-cli"
version = "0.1.2"
edition = "2024"

[dependencies]
texpand-core = { path = "../texpand-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
arboard = "3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0", features = ["process"] }
